--- a/packages/eksi-client/package.json
+++ b/packages/eksi-client/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "eksi-client",
-  "version": "1.0.0",
-  "private": true,
+  "name": "eksi",
+  "version": "1.0.0", 
   "main": "./dist",
   "scripts": {
     "prod": "webpack --mode=production",
     "dev": "webpack --mode=development --watch",
-    "prepublishOnly": "yarn run prod"
+    "prepublishOnly": "npm run prod"
   },
   "dependencies": {
     "axios": "^0.18.0"
