--- a/packages/eksi-client/package.json
+++ b/packages/eksi-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eksi",
-  "version": "1.0.0", 
+  "version": "1.0.0",
   "main": "./dist",
   "scripts": {
     "prod": "webpack --mode=production",
@@ -14,9 +14,13 @@
     "node": ">=8"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
-  }
+  },
+  "license": "MIT"
 }
