--- a/packages/eksi-client/package.json
+++ b/packages/eksi-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eksi",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "./dist",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -8,13 +8,14 @@
     "docs": "jsdoc ./src/index.js -d docs"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "axios": "^0.18.0",
     "query-string": "^6.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-polyfill": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "jsdoc": "^3.5.5"
   },
