--- a/packages/eksi-client/package.json
+++ b/packages/eksi-client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "babel ./src --out-dir ./dist",
-    "docs": "jsdoc ./src/index.js -d docs"
+    "docs": "jsdoc -R ./../../readme.md -d ./docs ./src/index.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
