--- a/packages/eksi-client/package.json
+++ b/packages/eksi-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eksi",
-  "version": "1.4.1",
+  "version": "1.5.1",
   "main": "./dist",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -8,15 +8,16 @@
     "docs": "jsdoc -R ./../../readme.md -d ./docs ./src/index.js"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
     "axios": "^0.18.0",
     "query-string": "^6.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
     "jsdoc": "^3.5.5"
   },
   "engines": {
